--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Walter Gabriel Valdivia Bejarano">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walter Valdivia</title>
+    <title>Walter Gabriel Valdivia Bejarano</title>
     <link rel="shortcut icon" href="./images/w2.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/estilos.css">
@@ -134,6 +134,18 @@
 
        </section>
     </main>
+    <h2> Compañeros de Carrera </h2>
+        <a href ="https://frac722.github.io/"> Alain Freiker Mullisaca Rivera</a>
+        <a href ="http://DiegoVillalobosA.github.io" > Diego Javier Villalobos Aroni </a>
+        <a href ="https://jeanmarcnadeauhuamani.com/" > Jean Marc Nadeau Huamani</a>
+        <a href ="https://nikolaszm.github.io/" > Nikolas Imanol Zuñiga Monroy</a>
+        <a href ="https://danielcayo-b5543.web.app/" > Daniel Nicolas Cayo Villena</a>
+        <a href ="https://valensazu.github.io/index.html" > Camila Valentina Salazar Zuliga</a>
+        <a href ="http://sergiosirenainfo.ml/"  Segio Manuel Sirena Malaga</a>
+        <a href ="https://ginosebastiand.github.io/" > Gino Sebastian Diaz Neyra</a>
+        <a href ="https://santiagosalassotillo.github.io/" > Santiago Daniel Salas Sotillo</a>
+        <a href ="http://analialejo.epizy.com/" > Anali Alejo Hiparhuanca</a>
+
     
 </body>
 </html>
