--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <a href ="https://nikolaszm.github.io/" > Nikolas Imanol Zuñiga Monroy</a>
         <a href ="https://danielcayo-b5543.web.app/" > Daniel Nicolas Cayo Villena</a>
         <a href ="https://valensazu.github.io/index.html" > Camila Valentina Salazar Zuliga</a>
-        <a href ="http://sergiosirenainfo.ml/"  Segio Manuel Sirena Malaga</a>
+        <a href ="http://sergiosirenainfo.ml/" > Segio Manuel Sirena Malaga</a>
         <a href ="https://ginosebastiand.github.io/" > Gino Sebastian Diaz Neyra</a>
         <a href ="https://santiagosalassotillo.github.io/" > Santiago Daniel Salas Sotillo</a>
         <a href ="http://analialejo.epizy.com/" > Anali Alejo Hiparhuanca</a>
