agregando link a la UCSP

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <h2 class="subtitle">¿Quién Soy?</h2>
             <p class="about paragraph"> Actualmente soy un estudiante apasionado de segundo semestre de la carrera de Ciencia de la Computación
                  en la UCSP de Arequipa</p>
+            <p>
+                <a href = "https://ucsp.edu.pe/"> Universidad Catolica San Pablo </a>
+            </p>
             <div class="about__main">
                 <article class="about__icons">
                     <img src="./images/c++.svg" class="about__icon" >
