agregando todos los links de companeros

--- a/index.html
+++ b/index.html
@@ -169,7 +169,54 @@
             <li>
                 <a href ="http://analialejo.epizy.com/" > Anali Alejo Hiparhuanca</a>
             </li>
-            
+            <li>    
+                <a href ="https://rodrigo-gomez-san-roman.web.app/" > Rodrigo Gomez San Roman</a>
+            </li>
+            <li>
+                <a href ="http://aleemp.github.io/AlejandraEMP/" >Alejandra Esthefany Mamani Pauca</a>
+            </li>
+            <li>
+                <a href ="https://seamurai.github.io/" >Sebastian Pavel Sanchez Pauca</a>
+            </li>
+            <li>
+                <a href ="http:/danielsoto.site/" >Daniel Alexander Soto Sahuanay</a>
+            </li>
+            <li>
+                <a href ="https://francozeg.github.io/" >Franco Sebastián Zegarra Puma</a>
+            </li>
+            <li>
+                <a href ="http://ruben-jeremias-nunez-flores.rf.gd/?i=2" >Ruben Jeremias Nuñez Flores</a>
+            </li>
+            <li>
+                <a href ="https://nickygadu2001.github.io/Nicolas-Aduvire-Pacheco/" >Nicolas Aduvire Pacheco</a>
+            </li>
+            <li>
+                <a href ="https://juanpalo1.github.io/" >Juan Jesús Palo Alejandro</a>
+            </li>
+            <li>
+                <a href ="https://hector-alejandro-novoa-soria.web.app" >Hector Alejandro Novoa Soria</a>
+            </li>
+            <li>
+                <a href ="https://sofiapintogalvez.github.io/" >Sofia Pinto Gálvez</a>
+            </li>
+            <li>
+                <a href ="https://paginawebiair.web.app/" >Iair Alejandro Suico Cornejo</a>
+            </li>
+            <li>
+                <a href ="https://paolojma.github.io/PaoloMostajo/" >Paolo Mostajo</a>
+            </li>
+            <li>
+                 <a href ="https://liar2128.github.io/" >Edison Nicolas Cama Choque</a>
+            </li>
+            <li>
+                 <a href ="https://olgabarreros.github.io/" >Olga Barreros</a>
+            </li>
+            <li>
+                 <a href ="https://gibale.github.io/" >Gabriel Francisco de la Colina</a>
+            </li>
+            <li>
+                <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" >karoline Mishell Paredes Hallasi</a>
+            </li>
         </ul>
     
 </body>
