--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <div class="about__main">
                 <article class="about__icons">
                     <img src="./images/c++.svg" class="about__icon" >
-                    <h3 class="about__title">Programacion Competitiva</h3>
-                    <p class="about__paragraph">Es uno de mis mas grandes retos personales la resolucion
-                        de problemas aplicando conocimiento de algoritmos y estructuras de datos
+                    <h3 class="about__title">Programación Competitiva</h3>
+                    <p class="about__paragraph"> Participe de varios concursos de Programación competitiva en mi pais, de la Olimpiada Peruana
+                        de Informatica, aplicando conocimientos profundos en algortimos y estructuras de datos
                     </p>
                 </article>
 
@@ -69,7 +69,7 @@
                     <img src="./images/code.svg" class="about__icon" >
                     <h3 class="about__title">Desarrollo web</h3>
                     <p class="about__paragraph">Uno de mis mas grandes intereses y pasatiempos
-                        es la creacion de las paginas y sitios web usando tecnologias de frontend 
+                        es la creacion de las paginas y sitios web usando tecnologias de frontend como HTML, CSS y Javascript
                     </p>
                 </article>
             </div>
