--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                     de Música Luis Duncker la Valle, lugar donde daría mi primer recital de musica clasica.
                     Más adelante entraría en el mundo de la programación gracias a las enseñanzas de mi hermano mayor quien fue mi guia en estos primeros
                     pasos, poco a poco me fui adentrando más en este mundo hasta llegar a tenerle este sentimiento que algunos llaman pasión.
+                    Partcipe de varios concursos de Programacion Competitiva, a nivel escolar y preuniversitario. Comenze a estudiar en la plataforma de educacion 
+                    online de Platzi donde aprenderia muchas temas propios de mi carrera estando aun en el colegio
                     A la edad de 16 años decidi que queria estudiar Ciencia de la Computacion inspirado en las enseñanzas de mi hermano
                     y hoy en dia curso el segundo semestre en la UCSP.
 
