--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     y hoy en dia curso el segundo semestre en la UCSP.
 
                 </p>
+                <img src="./images/opi.png" class="knowledge__img"> 
             </div>
             <figure class="knowledge__figure">
                 <img src="./images/foto3.png" class="knowledge__img">
