--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
                 </p>
                 <img src="./images/opi.png" class="knowledge__img"> 
+                <img src="./images/platzi.png" class="knowledge__img"> 
             </div>
             <figure class="knowledge__figure">
                 <img src="./images/foto3.png" class="knowledge__img">
