--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                     online de Platzi donde aprenderia muchas temas propios de mi carrera estando aun en el colegio
                     A la edad de 16 años decidi que queria estudiar Ciencia de la Computacion inspirado en las enseñanzas de mi hermano
                     y hoy en dia curso el segundo semestre en la UCSP.
+                    <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
+                    <a href="https://platzi.com/" class="cta">Platzi</a>
 
-                </p>
-                <img src="./images/opi.png" class="knowledge__img"> 
-                <img src="./images/platzi.png" class="knowledge__img"> 
+                </p> 
             </div>
             <figure class="knowledge__figure">
                 <img src="./images/foto3.png" class="knowledge__img">
