--- a/index.html
+++ b/index.html
@@ -142,82 +142,82 @@
     <h2> Compañeros de Carrera </h2>
         <ul>
             <li>
-                <a href ="https://frac722.github.io/"> Alain Freiker Mullisaca Rivera</a>
+                <a href ="https://frac722.github.io/" class="cta"> Alain Freiker Mullisaca Rivera</a>
             </li>
             <li>
-                <a href ="http://DiegoVillalobosA.github.io" > Diego Javier Villalobos Aroni </a>
+                <a href ="http://DiegoVillalobosA.github.io" class="cta"> Diego Javier Villalobos Aroni </a>
             </li>
             <li>
-                <a href ="https://jeanmarcnadeauhuamani.com/" > Jean Marc Nadeau Huamani</a>
+                <a href ="https://jeanmarcnadeauhuamani.com/" class="cta"> Jean Marc Nadeau Huamani</a>
             </li>
             <li>
-                <a href ="https://nikolaszm.github.io/" > Nikolas Imanol Zuñiga Monroy</a>
+                <a href ="https://nikolaszm.github.io/" class="cta" > Nikolas Imanol Zuñiga Monroy</a>
             </li>
             <li>
-                <a href ="https://danielcayo-b5543.web.app/" > Daniel Nicolas Cayo Villena</a>
+                <a href ="https://danielcayo-b5543.web.app/" class="cta"> Daniel Nicolas Cayo Villena</a>
             </li>
             <li>
-                <a href ="https://valensazu.github.io/index.html" > Camila Valentina Salazar Zuliga</a>
+                <a href ="https://valensazu.github.io/index.html" class="cta"> Camila Valentina Salazar Zuliga</a>
             </li>
             <li>
-                <a href ="http://sergiosirenainfo.ml/" > Segio Manuel Sirena Malaga</a>
+                <a href ="http://sergiosirenainfo.ml/" class="cta"> Segio Manuel Sirena Malaga</a>
             </li>
             <li>
-                <a href ="https://ginosebastiand.github.io/" > Gino Sebastian Diaz Neyra</a>
+                <a href ="https://ginosebastiand.github.io/" class="cta"> Gino Sebastian Diaz Neyra</a>
             </li>
             <li>
-                <a href ="https://santiagosalassotillo.github.io/" > Santiago Daniel Salas Sotillo</a>
+                <a href ="https://santiagosalassotillo.github.io/" class="cta"> Santiago Daniel Salas Sotillo</a>
             </li>
             <li>
-                <a href ="http://analialejo.epizy.com/" > Anali Alejo Hiparhuanca</a>
+                <a href ="http://analialejo.epizy.com/" class="cta"> Anali Alejo Hiparhuanca</a>
             </li>
             <li>    
-                <a href ="https://rodrigo-gomez-san-roman.web.app/" > Rodrigo Gomez San Roman</a>
+                <a href ="https://rodrigo-gomez-san-roman.web.app/" class="cta" > Rodrigo Gomez San Roman</a>
             </li>
             <li>
-                <a href ="http://aleemp.github.io/AlejandraEMP/" >Alejandra Esthefany Mamani Pauca</a>
+                <a href ="http://aleemp.github.io/AlejandraEMP/" class="cta">Alejandra Esthefany Mamani Pauca</a>
             </li>
             <li>
-                <a href ="https://seamurai.github.io/" >Sebastian Pavel Sanchez Pauca</a>
+                <a href ="https://seamurai.github.io/" class="cta">Sebastian Pavel Sanchez Pauca</a>
             </li>
             <li>
-                <a href ="http:/danielsoto.site/" >Daniel Alexander Soto Sahuanay</a>
+                <a href ="http:/danielsoto.site/" class="cta">Daniel Alexander Soto Sahuanay</a>
             </li>
             <li>
-                <a href ="https://francozeg.github.io/" >Franco Sebastián Zegarra Puma</a>
+                <a href ="https://francozeg.github.io/" class="cta">Franco Sebastián Zegarra Puma</a>
             </li>
             <li>
-                <a href ="http://ruben-jeremias-nunez-flores.rf.gd/?i=2" >Ruben Jeremias Nuñez Flores</a>
+                <a href ="http://ruben-jeremias-nunez-flores.rf.gd/?i=2" class="cta" >Ruben Jeremias Nuñez Flores</a>
             </li>
             <li>
-                <a href ="https://nickygadu2001.github.io/Nicolas-Aduvire-Pacheco/" >Nicolas Aduvire Pacheco</a>
+                <a href ="https://nickygadu2001.github.io/Nicolas-Aduvire-Pacheco/" class="cta">Nicolas Aduvire Pacheco</a>
             </li>
             <li>
-                <a href ="https://juanpalo1.github.io/" >Juan Jesús Palo Alejandro</a>
+                <a href ="https://juanpalo1.github.io/" class="cta">Juan Jesús Palo Alejandro</a>
             </li>
             <li>
-                <a href ="https://hector-alejandro-novoa-soria.web.app" >Hector Alejandro Novoa Soria</a>
+                <a href ="https://hector-alejandro-novoa-soria.web.app" class="cta">Hector Alejandro Novoa Soria</a>
             </li>
             <li>
-                <a href ="https://sofiapintogalvez.github.io/" >Sofia Pinto Gálvez</a>
+                <a href ="https://sofiapintogalvez.github.io/" class="cta">Sofia Pinto Gálvez</a>
             </li>
             <li>
-                <a href ="https://paginawebiair.web.app/" >Iair Alejandro Suico Cornejo</a>
+                <a href ="https://paginawebiair.web.app/" class="cta">Iair Alejandro Suico Cornejo</a>
             </li>
             <li>
-                <a href ="https://paolojma.github.io/PaoloMostajo/" >Paolo Mostajo</a>
+                <a href ="https://paolojma.github.io/PaoloMostajo/" class="cta">Paolo Mostajo</a>
             </li>
             <li>
-                 <a href ="https://liar2128.github.io/" >Edison Nicolas Cama Choque</a>
+                 <a href ="https://liar2128.github.io/" class="cta">Edison Nicolas Cama Choque</a>
             </li>
             <li>
-                 <a href ="https://olgabarreros.github.io/" >Olga Barreros</a>
+                 <a href ="https://olgabarreros.github.io/" class="cta">Olga Barreros</a>
             </li>
             <li>
-                 <a href ="https://gibale.github.io/" >Gabriel Francisco de la Colina</a>
+                 <a href ="https://gibale.github.io/" class="cta">Gabriel Francisco de la Colina</a>
             </li>
             <li>
-                <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" >karoline Mishell Paredes Hallasi</a>
+                <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" class="cta">karoline Mishell Paredes Hallasi</a>
             </li>
         </ul>
     
