--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     A la edad de 16 años decidi que queria estudiar Ciencia de la Computacion inspirado en las enseñanzas de mi hermano
                     y hoy en dia curso el segundo semestre en la UCSP.
                     <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
-                    <a href="https://platzi.com/" class="cta">Platzi</a>
+                    <a href="https://platzi.com/p/walterjoelvaldivia/" class="cta">Platzi</a>
 
                 </p> 
             </div>
