--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p class="about paragraph"> Actualmente soy un estudiante apasionado de segundo semestre de la carrera de Ciencia de la Computación
                  en la UCSP de Arequipa</p>
             <p>
-                <a href = "https://ucsp.edu.pe/"> Universidad Catolica San Pablo </a>
+                <a href = "https://ucsp.edu.pe/" class = "cta"> Universidad Catolica San Pablo </a>
             </p>
             <div class="about__main">
                 <article class="about__icons">
