--- a/index.html
+++ b/index.html
@@ -139,87 +139,88 @@
 
        </section>
     </main>
-    <h2> Compañeros de Carrera </h2>
-        <ul>
-            <li>
-                <a href ="https://frac722.github.io/" class="cta"> Alain Freiker Mullisaca Rivera</a>
-            </li>
-            <li>
-                <a href ="http://DiegoVillalobosA.github.io" class="cta"> Diego Javier Villalobos Aroni </a>
-            </li>
-            <li>
-                <a href ="https://jeanmarcnadeauhuamani.com/" class="cta"> Jean Marc Nadeau Huamani</a>
-            </li>
-            <li>
-                <a href ="https://nikolaszm.github.io/" class="cta" > Nikolas Imanol Zuñiga Monroy</a>
-            </li>
-            <li>
-                <a href ="https://danielcayo-b5543.web.app/" class="cta"> Daniel Nicolas Cayo Villena</a>
-            </li>
-            <li>
-                <a href ="https://valensazu.github.io/index.html" class="cta"> Camila Valentina Salazar Zuliga</a>
-            </li>
-            <li>
-                <a href ="http://sergiosirenainfo.ml/" class="cta"> Segio Manuel Sirena Malaga</a>
-            </li>
-            <li>
-                <a href ="https://ginosebastiand.github.io/" class="cta"> Gino Sebastian Diaz Neyra</a>
-            </li>
-            <li>
-                <a href ="https://santiagosalassotillo.github.io/" class="cta"> Santiago Daniel Salas Sotillo</a>
-            </li>
-            <li>
-                <a href ="http://analialejo.epizy.com/" class="cta"> Anali Alejo Hiparhuanca</a>
-            </li>
-            <li>    
-                <a href ="https://rodrigo-gomez-san-roman.web.app/" class="cta" > Rodrigo Gomez San Roman</a>
-            </li>
-            <li>
-                <a href ="http://aleemp.github.io/AlejandraEMP/" class="cta">Alejandra Esthefany Mamani Pauca</a>
-            </li>
-            <li>
-                <a href ="https://seamurai.github.io/" class="cta">Sebastian Pavel Sanchez Pauca</a>
-            </li>
-            <li>
-                <a href ="http:/danielsoto.site/" class="cta">Daniel Alexander Soto Sahuanay</a>
-            </li>
-            <li>
-                <a href ="https://francozeg.github.io/" class="cta">Franco Sebastián Zegarra Puma</a>
-            </li>
-            <li>
-                <a href ="http://ruben-jeremias-nunez-flores.rf.gd/?i=2" class="cta" >Ruben Jeremias Nuñez Flores</a>
-            </li>
-            <li>
-                <a href ="https://nickygadu2001.github.io/Nicolas-Aduvire-Pacheco/" class="cta">Nicolas Aduvire Pacheco</a>
-            </li>
-            <li>
-                <a href ="https://juanpalo1.github.io/" class="cta">Juan Jesús Palo Alejandro</a>
-            </li>
-            <li>
-                <a href ="https://hector-alejandro-novoa-soria.web.app" class="cta">Hector Alejandro Novoa Soria</a>
-            </li>
-            <li>
-                <a href ="https://sofiapintogalvez.github.io/" class="cta">Sofia Pinto Gálvez</a>
-            </li>
-            <li>
-                <a href ="https://paginawebiair.web.app/" class="cta">Iair Alejandro Suico Cornejo</a>
-            </li>
-            <li>
-                <a href ="https://paolojma.github.io/PaoloMostajo/" class="cta">Paolo Mostajo</a>
-            </li>
-            <li>
-                 <a href ="https://liar2128.github.io/" class="cta">Edison Nicolas Cama Choque</a>
-            </li>
-            <li>
-                 <a href ="https://olgabarreros.github.io/" class="cta">Olga Barreros</a>
-            </li>
-            <li>
-                 <a href ="https://gibale.github.io/" class="cta">Gabriel Francisco de la Colina</a>
-            </li>
-            <li>
-                <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" class="cta">karoline Mishell Paredes Hallasi</a>
-            </li>
-        </ul>
-    
+        <div align = "center">
+           <h2> Compañeros de Carrera </h2>
+             <ul>
+                <li>
+                    <a href ="https://frac722.github.io/" class="cta"> Alain Freiker Mullisaca Rivera</a>
+                </li>
+                <li>
+                    <a href ="http://DiegoVillalobosA.github.io" class="cta"> Diego Javier Villalobos Aroni </a>
+                </li>
+                <li>
+                    <a href ="https://jeanmarcnadeauhuamani.com/" class="cta"> Jean Marc Nadeau Huamani</a>
+                </li>
+                <li>
+                    <a href ="https://nikolaszm.github.io/" class="cta" > Nikolas Imanol Zuñiga Monroy</a>
+                </li>
+                <li>
+                    <a href ="https://danielcayo-b5543.web.app/" class="cta"> Daniel Nicolas Cayo Villena</a>
+                </li>
+                <li>
+                    <a href ="https://valensazu.github.io/index.html" class="cta"> Camila Valentina Salazar Zuliga</a>
+                </li>
+                <li>
+                    <a href ="http://sergiosirenainfo.ml/" class="cta"> Segio Manuel Sirena Malaga</a>
+                </li>
+                <li>
+                    <a href ="https://ginosebastiand.github.io/" class="cta"> Gino Sebastian Diaz Neyra</a>
+                </li>
+                <li>
+                    <a href ="https://santiagosalassotillo.github.io/" class="cta"> Santiago Daniel Salas Sotillo</a>
+                </li>
+                <li>
+                    <a href ="http://analialejo.epizy.com/" class="cta"> Anali Alejo Hiparhuanca</a>
+                </li>
+                <li>    
+                    <a href ="https://rodrigo-gomez-san-roman.web.app/" class="cta" > Rodrigo Gomez San Roman</a>
+                </li>
+                <li>
+                    <a href ="http://aleemp.github.io/AlejandraEMP/" class="cta">Alejandra Esthefany Mamani Pauca</a>
+                </li>
+                <li>
+                    <a href ="https://seamurai.github.io/" class="cta">Sebastian Pavel Sanchez Pauca</a>
+                </li>
+                <li>
+                    <a href ="http:/danielsoto.site/" class="cta">Daniel Alexander Soto Sahuanay</a>
+                </li>
+                <li>
+                    <a href ="https://francozeg.github.io/" class="cta">Franco Sebastián Zegarra Puma</a>
+                </li>
+                <li>
+                    <a href ="http://ruben-jeremias-nunez-flores.rf.gd/?i=2" class="cta" >Ruben Jeremias Nuñez Flores</a>
+                </li>
+                <li>
+                    <a href ="https://nickygadu2001.github.io/Nicolas-Aduvire-Pacheco/" class="cta">Nicolas Aduvire Pacheco</a>
+                </li>
+                <li>
+                    <a href ="https://juanpalo1.github.io/" class="cta">Juan Jesús Palo Alejandro</a>
+                </li>
+                <li>
+                    <a href ="https://hector-alejandro-novoa-soria.web.app" class="cta">Hector Alejandro Novoa Soria</a>
+                </li>
+                <li>
+                    <a href ="https://sofiapintogalvez.github.io/" class="cta">Sofia Pinto Gálvez</a>
+                </li>
+                <li>
+                    <a href ="https://paginawebiair.web.app/" class="cta">Iair Alejandro Suico Cornejo</a>
+                </li>
+                <li>
+                    <a href ="https://paolojma.github.io/PaoloMostajo/" class="cta">Paolo Mostajo</a>
+                </li>
+                <li>
+                     <a href ="https://liar2128.github.io/" class="cta">Edison Nicolas Cama Choque</a>
+                </li>
+                <li>
+                     <a href ="https://olgabarreros.github.io/" class="cta">Olga Barreros</a>
+                </li>
+                <li>
+                     <a href ="https://gibale.github.io/" class="cta">Gabriel Francisco de la Colina</a>
+                </li>
+                <li>
+                    <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" class="cta">karoline Mishell Paredes Hallasi</a>
+                </li>
+            </ul>
+            </di>
 </body>
 </html>
