--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <section class="container about">
             <h2 class="subtitle">¿Quién Soy?</h2>
-            <p class="about paragraph"> Actualmente soy un estudiante apasionado de segundo semestre de la carrera de Ciencia de la Computación
+            <p class="about paragraph"> Actualmente soy un estudiante de segundo semestre de la carrera de Ciencia de la Computación
                  en la UCSP de Arequipa</p>
             <p>
                 <a href = "https://ucsp.edu.pe/" class = "cta"> Universidad Catolica San Pablo </a>
