--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <article class="about__icons">
                     <img src="./images/steam.svg" class="about__icon" >
                     <h3 class="about__title">Desarrollo de videojuegos</h3>
-                    <p class="about__paragraph">Una de las ramas mas interesantes y con mayor crecimiento
-                        en los ultimos años de la Ciencia de la Computacion
+                    <p class="about__paragraph"> Tengo un amplio de portafolio de creacion de videojuegos usando lenguajes como
+                        python y c++ 
                     </p>
                 </article>
 
