--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </figure>
         </div>
        </section>
-       <section class = "price container ">
+       <section class = "price_container ">
         <h2 class="subtitle"> CURSOS </h2>
         <div class="price__table">
             <div class="price__element">
