--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 <article class="about__icons">
                     <img src="./images/c++.svg" class="about__icon" >
                     <h3 class="about__title">Programación Competitiva</h3>
-                    <p class="about__paragraph"> Participe de varios concursos de Programación competitiva en mi pais, de la Olimpiada Peruana
-                        de Informatica, aplicando conocimientos profundos en algortimos y estructuras de datos
+                    <p class="about__paragraph"> Participé de varios concursos de Programación competitiva en mi país, de la Olimpiada Peruana
+                        de Informática, aplicando conocimientos profundos en algortimos y estructuras de datos.
                     </p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/steam.svg" class="about__icon" >
                     <h3 class="about__title">Desarrollo de videojuegos</h3>
-                    <p class="about__paragraph"> Tengo un amplio de portafolio de creacion de videojuegos usando lenguajes como
-                        python y c++ 
+                    <p class="about__paragraph"> Tengo un amplio portafolio de creación de videojuegos usando lenguajes como
+                        python y c++, los cuales empezé a muy temprana edad. 
                     </p>
                 </article>
 
@@ -69,7 +69,7 @@
                     <img src="./images/code.svg" class="about__icon" >
                     <h3 class="about__title">Desarrollo web</h3>
                     <p class="about__paragraph">Uno de mis mas grandes intereses y pasatiempos
-                        es la creacion de las paginas y sitios web usando tecnologias de frontend como HTML, CSS y Javascript
+                        es la creación de las páginas y sitios web usando tecnologías de frontend como HTML, CSS y Javascript
                     </p>
                 </article>
             </div>
@@ -81,13 +81,13 @@
                 <p class = "knowledge__paragraph">Nací el 1 de diciembre de 2004 en la ciudad de Arequipa, ubicada al sur del Perú, 
                     a la edad de 4 años asistí al colegio Mercedario San Pedro Pascual, donde viví los mejores momentos de mi infancia y 
                     temprana adolescencia, durante gran parte de mis vacaciones escolares recibía clases de música en el Conservatorio Regional
-                    de Música Luis Duncker la Valle, lugar donde daría mi primer recital de musica clasica.
-                    Más adelante entraría en el mundo de la programación gracias a las enseñanzas de mi hermano mayor quien fue mi guia en estos primeros
-                    pasos, poco a poco me fui adentrando más en este mundo hasta llegar a tenerle este sentimiento que algunos llaman pasión.
-                    Partcipe de varios concursos de Programacion Competitiva, a nivel escolar y preuniversitario. Comenze a estudiar en la plataforma de educacion 
+                    de Música Luis Duncker la Valle, lugar donde daría mi primer recital de música clásica.
+                    Más adelante entraría en el mundo de la programación gracias a las enseñanzas de mi hermano mayor quien fue mi guía en estos primeros
+                    pasos, poco a poco me fui adentrando más en éste mundo hasta llegar a tenerle este sentimiento que algunos llaman pasión.
+                    Partcipé de varios concursos de Programación Competitiva, a nivel escolar y preuniversitario. Comenzé a estudiar en la plataforma de educación 
                     online de Platzi donde aprenderia muchas temas propios de mi carrera estando aun en el colegio
-                    A la edad de 16 años decidi que queria estudiar Ciencia de la Computacion inspirado en las enseñanzas de mi hermano
-                    y hoy en dia curso el segundo semestre en la UCSP.
+                    A la edad de 16 años decidí que queria estudiar Ciencia de la Computación inspirado en las enseñanzas de mi hermano
+                    y hoy en día curso el segundo semestre en la UCSP.
                     <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
                     <a href="https://platzi.com/p/walterjoelvaldivia/" class="cta">Platzi</a>
 
@@ -102,10 +102,10 @@
         <h2 class="subtitle"> CURSOS </h2>
         <div class="price__table">
             <div class="price__element">
-                <p class="name">INTRODUCCION A LA CIENCIA DE LA COMPUTACION</p>
+                <p class="name">INTRODUCCIÓN A LA CIENCIA DE LA COMPUTACIÓN</p>
                 <h3 class="price__price"></h3>
                 <div class="price__items">
-                <p class="price__features">Curso introductorio de la Ciencia de la Computacion, dictado
+                <p class="price__features">Curso introductorio de la Ciencia de la Computación, dictado
                     por el profesor Ernesto Cuadros Vargas
                 </p>
                 <p class="price__features"></p>
@@ -118,18 +118,18 @@
                 <p class="name">ESTRUCTURAS DISCRETAS II</p>
                 <h3 class="price__price"></h3>
                 <div class="price__items">
-                <p class="price__features"> Curso base en el pensamiento matematica de la 
-                    teoria de la computacion, dictado por el profesor Luis Diaz Basurco
+                <p class="price__features"> Curso base en el pensamiento matemático de la 
+                    teoria de la computación, dictado por el profesor Luis Diaz Basurco
                 </p>
                 </div>
                 <a href="https://www.linkedin.com/in/luis-fernando-d%C3%ADaz-basurco-48098333/?originalSubdomain=pe" class="cta">Luis Diaz Basurco</a>
             </div>
 
             <div class="price__element">
-                <p class="name">CIENCIA DE LA COMPUTACION I</p>
+                <p class="name">CIENCIA DE LA COMPUTACIÓN I</p>
                 <h3 class="price__price"></h3>
                 <div class="price__items">
-                <p class="price__features">Curso orientado al desarrollo de la programacion en el lenguaje
+                <p class="price__features">Curso orientado al desarrollo de la programación en el lenguaje
                     c++, dictado por el docente Manuel Eduardo Loaiza
                 </p>
                 </div>
