--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
        </section>
        <section class = "price_container">
-        <h2 class="subtitle"> CURSOS </h2>
+        <h2 class="subtitle2"> CURSOS </h2>
         <div class="price__table">
             <div class="price__element">
                 <p class="name">INTRODUCCIÓN A LA CIENCIA DE LA COMPUTACIÓN</p>
