--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <article class="about__icons">
                     <img src="./images/code.svg" class="about__icon" >
                     <h3 class="about__title">Desarrollo web</h3>
-                    <p class="about__paragraph">Uno de mis mas grandes intereses y pasatiempos
+                    <p class="about__paragraph">Uno de mis más grandes intereses y pasatiempos
                         es la creación de las páginas y sitios web usando tecnologías de frontend como HTML, CSS y Javascript
                     </p>
                 </article>
@@ -77,7 +77,7 @@
        <section class="knowledge">
         <div class="knowledge__container container">
             <div class="knowledge__texts">
-                <h2 class="subtitle">BIOGRAFIA</h2>
+                <h2 class="subtitle">BIOGRAFÍA</h2>
                 <p class = "knowledge__paragraph">Nací el 1 de diciembre de 2004 en la ciudad de Arequipa, ubicada al sur del Perú, 
                     a la edad de 4 años asistí al colegio Mercedario San Pedro Pascual, donde viví los mejores momentos de mi infancia y 
                     temprana adolescencia, durante gran parte de mis vacaciones escolares recibía clases de música en el Conservatorio Regional
@@ -85,7 +85,7 @@
                     Más adelante entraría en el mundo de la programación gracias a las enseñanzas de mi hermano mayor quien fue mi guía en estos primeros
                     pasos, poco a poco me fui adentrando más en éste mundo hasta llegar a tenerle este sentimiento que algunos llaman pasión.
                     Partcipé de varios concursos de Programación Competitiva, a nivel escolar y preuniversitario. Comenzé a estudiar en la plataforma de educación 
-                    online de Platzi donde aprenderia muchas temas propios de mi carrera estando aun en el colegio
+                    online de Platzi donde aprendería muchas temas propios de mi carrera estando aún en el colegio
                     A la edad de 16 años decidí que queria estudiar Ciencia de la Computación inspirado en las enseñanzas de mi hermano
                     y hoy en día curso el segundo semestre en la UCSP.
                     <a href="https://fopi.org.pe/" class="cta">Olimpiada Peruana de Informatica</a>
@@ -106,7 +106,7 @@
                 <h3 class="price__price"></h3>
                 <div class="price__items">
                 <p class="price__features">Curso introductorio de la Ciencia de la Computación, dictado
-                    por el profesor Ernesto Cuadros Vargas
+                    por el profesor Ernesto Cuadros Vargas.
                 </p>
                 <p class="price__features"></p>
                 <p class="price__features"></p>
@@ -119,7 +119,7 @@
                 <h3 class="price__price"></h3>
                 <div class="price__items">
                 <p class="price__features"> Curso base en el pensamiento matemático de la 
-                    teoria de la computación, dictado por el profesor Luis Diaz Basurco
+                    teoria de la computación, dictado por el profesor Luis Diaz Basurco.
                 </p>
                 </div>
                 <a href="https://www.linkedin.com/in/luis-fernando-d%C3%ADaz-basurco-48098333/?originalSubdomain=pe" class="cta">Luis Diaz Basurco</a>
@@ -130,7 +130,7 @@
                 <h3 class="price__price"></h3>
                 <div class="price__items">
                 <p class="price__features">Curso orientado al desarrollo de la programación en el lenguaje
-                    c++, dictado por el docente Manuel Eduardo Loaiza
+                    c++, dictado por el docente Manuel Eduardo Loaiza.
                 </p>
                 </div>
                 <a href="https://ctivitae.concytec.gob.pe/appDirectorioCTI/VerDatosInvestigador.do?id_investigador=54641" class="cta">Manuel Eduardo Loaiza</a>
