--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
                 <li>
                     <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" class="cta">karoline Mishell Paredes Hallasi</a>
                 </li>
+                 <li>
+                     <a href = "https://dagner25.github.io/Dagner/" class = "cta"> Dagner Milco Lupacca Holgado" </a>
+                 </li>
             </ul>
 </body>
 </html>
