--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
        </section>
     </main>
-          <h2> Compañeros de Carrera </h2>
+          <h2 class = "comp"> Compañeros de Carrera </h2>
              <ul>
                 <li>
                     <a href ="https://frac722.github.io/" class="cta"> Alain Freiker Mullisaca Rivera</a>
