--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        <section class="knowledge">
         <div class="knowledge__container container">
             <div class="knowledge__texts">
-                <h2 class="subtitle">BIOGRAFÍA</h2>
+                <h2 class="subtitle">Biografía</h2>
                 <p class = "knowledge__paragraph">Nací el 1 de diciembre de 2004 en la ciudad de Arequipa, ubicada al sur del Perú, 
                     a la edad de 4 años asistí al colegio Mercedario San Pedro Pascual, donde viví los mejores momentos de mi infancia y 
                     temprana adolescencia, durante gran parte de mis vacaciones escolares recibía clases de música en el Conservatorio Regional
@@ -99,7 +99,7 @@
         </div>
        </section>
        <section class = "price_container">
-        <h2 class="subtitle2"> CURSOS </h2>
+        <h2 class="subtitle2"> Cursos </h2>
         <div class="price__table">
             <div class="price__element">
                 <p class="name">INTRODUCCIÓN A LA CIENCIA DE LA COMPUTACIÓN</p>
