--- a/index.html
+++ b/index.html
@@ -162,12 +162,14 @@
                     <a href ="https://hector-alejandro-novoa-soria.web.app" class="cta">Hector Alejandro Novoa Soria</a>              
                     <a href ="https://sofiapintogalvez.github.io/" class="cta">Sofia Pinto Gálvez</a>              
                     <a href ="https://paginawebiair.web.app/" class="cta">Iair Alejandro Suico Cornejo</a>             
-                    <a href ="https://paolojma.github.io/PaoloMostajo/" class="cta">Paolo Mostajo</a>              
+                    <a href ="https://paolojma.github.io/PaoloMostajo/" class="cta">Paolo Jesus Mostajo Alor</a>              
                     <a href ="https://liar2128.github.io/" class="cta">Edison Nicolas Cama Choque</a>               
-                    <a href ="https://olgabarreros.github.io/" class="cta">Olga Barreros</a>               
-                    <a href ="https://gibale.github.io/" class="cta">Gabriel Francisco de la Colina</a>             
+                    <a href ="https://olgabarreros.github.io/" class="cta">Olga Angelica Barreros</a>               
+                    <a href ="https://gibale.github.io/" class="cta">Gabriel Francisco de la Colina Acurio</a>             
                     <a href ="https://karolinemishellparedeshallasi.000webhostapp.com/" class="cta">koline Mishell Paredes Hallasi</a>               
-                    <a href = "https://dagner25.github.io/Dagner/" class = "cta"> Dagner Milco Lupacca Holgado" </a>
+                    <a href = "https://dagner25.github.io/Dagner/" class = "cta"> Dagner Milco Lupacca Holgado </a>
+                    <a href = "https://mariafernandacuentas.000webhostapp.com/" class = "cta"> Maria Fernanda Cuentas Escobedo </a>
+              
           </div>
              
 </body>
