--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
                     <a href = "https://mariafernandacuentas.000webhostapp.com/" class = "cta"> Maria Fernanda Cuentas Escobedo </a>
               
           </div>
+          <section class = "botones">
+              <a href="#" class = "linkedin"> </a> 
+              <a href="#" class = "github"> </a>
+              <a href="#" class = "gmail"> </a> 
+          </section>
              
 </body>
 </html>
