--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
               
           </div>
           <section class = "botones">
-              <a href="#" class = "linkedin"> </a> 
-              <a href="#" class = "github"> </a>
-              <a href="#" class = "gmail"> </a> 
+              <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe" class = "fa-brands fa-linkedin"></a> 
+              <a href="https://github.com/GABRIEL7714" class = "fa-brands fa-github"></a>
+              <a href="https://www.instagram.com/walter.valdivia.124/" class = "fa-brands fa-instagram"></a> 
           </section>
              
 </body>
