--- a/index.html
+++ b/index.html
@@ -172,9 +172,15 @@
               
           </div>
           <section class = "botones">
-              <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe" class = "fa-brands fa-linkedin"></a> 
-              <a href="https://github.com/GABRIEL7714" class = "fa-brands fa-github"></a>
-              <a href="https://www.instagram.com/walter.valdivia.124/" class = "fa-brands fa-instagram"></a> 
+              <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
+                <i class="fa-brands fa-linkedin"></i>
+              </a> 
+              <a href="https://github.com/GABRIEL7714">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://www.instagram.com/walter.valdivia.124/">
+                <i class="fa-brands fa-instagram"></i>
+              </a> 
           </section>
              
 </body>
