--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a href="#" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Acerca de</a>
+                    <a href="#container about" class="nav__links">Acerca de</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Blog</a>
+                    <a href="#knowledge" class="nav__links">Blog</a>
                 </li>
                 <li class="nav__items">
                     <a href="#" class="nav__links">Contacto</a>
