--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
     </header>
     <main>
-        <section class="container about">
+        <section class="container about" id ="container about">
             <h2 class="subtitle">¿Quién Soy?</h2>
             <p class="about paragraph"> Actualmente soy un estudiante de segundo semestre de la carrera de Ciencia de la Computación
                  en la UCSP de Arequipa</p>
@@ -74,7 +74,7 @@
                 </article>
             </div>
         </section>
-       <section class="knowledge">
+       <section class="knowledge" id="knowledge">
         <div class="knowledge__container container">
             <div class="knowledge__texts">
                 <h2 class="subtitle">Biografía</h2>
