--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <i class="fa-brands fa-linkedin"></i>
               </a> 
               <a href="https://github.com/GABRIEL7714">
-                <i class="fa-brands fa-github"></i>
+                <i class='bx bxl-instagram'></i>
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
                 <i class="fa-brands fa-instagram"></i>
