--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#knowledge" class="nav__links">Blog</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Contacto</a>
+                    <a href="#contacto" class="nav__links">Contacto</a>
                 </li>
                 <img src="./images/triangle.svg"  class="nav__close">
             </ul>
@@ -171,7 +171,7 @@
                     <a href = "https://mariafernandacuentas.000webhostapp.com/" class = "cta"> Maria Fernanda Cuentas Escobedo </a>
               
           </div>
-          <section class = "botones">
+          <section class = "botones" id = "contacto">
               <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
                 <i class="fa-brands fa-linkedin"></i>
               </a> 
