--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
           </div>
           <section class = "botones" id = "contacto">
               <a href="https://www.linkedin.com/in/walter-gabriel-valdivia-bejarano-aa0aa8206/?originalSubdomain=pe">
-                <i class="fa-brands fa-linkedin"></i>
+                <img src= "./images/linkedin.svg"
               </a> 
               <a href="https://github.com/GABRIEL7714">
-                <i class='bx bxl-instagram'></i>
+                <img src= "./images/github.svg"
               </a>
               <a href="https://www.instagram.com/walter.valdivia.124/">
-                <i class="fa-brands fa-instagram"></i>
+                <img src= "./images/instagram.svg"
               </a> 
           </section>
              
